# my-notes

./: README.md
infrastructure/: README.md  cdk.json  package-lock.json  package.json
infrastructure/docs/: api-endpoints.md
infrastructure/docs/api-calls/: delete-note.sh  get-note.sh  post-content.sh  sample-note.json
infrastructure/lib/: auth-stack.ts  my-notes-api.ts  my-notes-application-stack.ts  network-stack.ts
infrastructure/lib/api/: save-note.ts
infrastructure/test/: my-notes.test.ts
lambda/: .dockerignore  .gitignore  Pipfile  README.md  docker-compose.yml  requirements.txt  setup.cfg
lambda/docs/: using_localstack.md
lambda/localstack/: Makefile
lambda/mynotes/adapter/: config.py  notes_adapter.py  s3_bucket_adapter.py  utils.py
lambda/mynotes/core/: architecture.py  notes.py
lambda/mynotes/core/utils/: common.py
lambda/mynotes/port/: exception_management.py  lambda_utils.py  note.py  notes.py
lambda/tests/: conftest.py
lambda/tests/unit/mynotes/adapter/: custom_boto3_localstack.py  custom_boto3_mocks.py  test_notes_adapter.py  test_s3_bucket_adapter.py  test_utils.py
lambda/tests/unit/mynotes/core/: test_architecture.py  test_notes.py
lambda/tests/unit/mynotes/port/: test_exception_management.py  test_lambda_utils.py
