[metadata]
name = my-notes
version = 0.0.1
author = Mario Scalas
author_email = mario.scalas@gmail.com
description = My Notes business logic as AWS Lambda implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scalasm/my-notes
project_urls =
    Bug Tracker = https://github.com/scalasm/my-notes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .